# error-microservice

./: .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  create_keys.sh  docker-compose.yml  env.sh  rustfmt.toml  schema.sql
docs/: CORS.md
src/: core.rs  main.rs  routes.rs  server.rs
src/core/: database.rs  validator.rs
src/core/errors/: repository.rs
src/errorss/: errors_controller.rs  errors_service.rs  mod.rs
src/models/: errorss.rs  mod.rs
src/routes/: controllers.rs
src/routes/api/: status.rs  v1.rs
src/routes/api/status/: controllers.rs
src/routes/api/v1/: errors.rs
src/server/: configuration.rs  env_variables.rs  logger.rs  middleware.rs  middlewares.rs
src/server/middleware/: headers.rs  profile.rs  validators.rs
