[package]
name = "error-microservice"
version = "0.1.0"
edition = "2021"
authors = ["Israel Rosales Laguan<israellaguan@gmail.com>"]

[[bin]]
doc = false
name = "error-microservice"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.9.0"
flexi_logger = { version = "0.23", features = ["async", "compress", "use_chrono_for_offset"] }
futures = "0.1"
lazy_static = "0.2"
log = "0.4.17"
r2d2 = "0.8.3"
serde = "1.0.24"
serde_json = "1.0.8"
serde_derive = "1.0.24"
snafu = "0.7.1"
thruster = "1.2.4"
time = "0.1.38"
tokio = "0.1.3"
tokio-proto = "0.1"
tokio-service = "0.1"
uuid = { version = "0.6", features = ["serde", "v4"] }
