[package]
name = "error-microservice"
version = "0.1.0"
authors = ["Israel Rosales Laguan<israellaguan@gmail.com>"]
edition = "2021"
description = "API to Manage errors for different applications"

[[bin]]
doc = false
name = "error-microservice"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia = "0.8.2"
diesel = { version = "2.0", features = ["postgres", "r2d2", "uuid"] }
dotenv = "0.15"
envy = "0.4"
flexi_logger = { version = "0.23", features = ["async", "compress", "use_chrono_for_offset"] }
futures = "0.3"
hyper = { version = "0.14", features = ["http1", "http2", "runtime", "server", "stream"] }
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
snafu = "0.7"
thruster = { version = "1.2.4", features = ["hyper_server", "tls"]}
time = "0.3"
tokio = "1.21"
tokio-proto = "0.1"
tokio-service = "0.1"
uuid = { version = "1.1", features = ["serde", "v4"] }
